fix for download regression, use the right variable (bug 241199, r=biesi)